--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,82 @@
+/* :root{
+
+  /* font weights */
+
+/* --thin: 100;
+  --extralight: 200;
+  --light: 300;
+  --regular: 400;
+  --medium: 500;
+  --semibold: 600;
+  --bold: 700;
+  --extrabold: 800; */
+/* } */
+
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+* {
+  scrollbar-width: none;
+  scrollbar-color: #4f4f4f #f4ebe2;
+  font-family: 'JetBrains Mono', monospace;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 14px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #3a3a3a;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #141414;
+  border-radius: 0px;
+  border: 0px inset #ffffff;
+}
+
 body {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
+  background-color: #f4ebe2;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100;200;300;400;500;600;700;800&family=Josefin+Sans&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100;200;300;400;500;600;700;800&family=Josefin+Sans&display=swap");
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+#thin {
+  font-weight: 100;
+}
+
+#extralight {
+  font-weight: 200;
+}
+
+#light {
+  font-weight: 300;
+}
+
+#regular {
+  font-weight: 400;
+}
+
+#medium {
+  font-weight: 500;
+}
+
+#semibold {
+  font-weight: 600;
+}
+
+#bold {
+  font-weight: 700;
+}
+
+#extrabold {
+  font-weight: 800;
 }
