--- a/src/components/components.css
+++ b/src/components/components.css
@@ -1,84 +1,134 @@
-.header-container{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    
-    position: fixed;
-    z-index: 1;
-    width: 100%;
-    height: 7vh;
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
-    padding: 2vh 2vw;
-    margin: 0 0;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 7vh;
 
-    background-color: #141414;
-    color: #fff;
-    filter: opacity(98%);
-    border-bottom: 1px solid #6d6d6d;
+  padding: 2vh 2vw;
+  margin: 0 0;
 
-    text-transform: uppercase;
+  background-color: #141414;
+  color: #fff;
+  filter: opacity(98%);
+  border-bottom: 1px solid #6d6d6d;
+
+  text-transform: uppercase;
 }
 
-.header-container h1, .header-container h2{
-    cursor: pointer;
+.header-container h1,
+.header-container h2 {
+  cursor: pointer;
 }
 
-.header-links{
-    display: flex;
-    gap: 1.7vw;
-    margin: 0 4vw;
+.header-links {
+  display: flex;
+  gap: 1.7vw;
+  margin: 0 4vw;
 }
 
-.reservar{
-    color: #5CB85C;
+.reservar {
+  color: #5cb85c;
 }
 
-.sub-links{
-    display: flex;
-    gap: 1vw;
+.sub-links {
+  display: flex;
+  gap: 1vw;
 }
 
-
-.logo{
-    font-family: 'Josefin Sans', sans-serif;
-    letter-spacing: 3px;
-    font-size: 2.3em;
-    margin: 1.7vw;
+.logo {
+  font-family: "Josefin Sans", sans-serif;
+  letter-spacing: 3px;
+  font-size: 2.3em;
+  margin: 1.7vw;
 }
 
 /* -------------------------------------------------------------- */
 
-.footer-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    
-    bottom: 0;
-    width: 100vw;
-    padding: 1vh 0 0 0;
-    
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-    background-color: #141414;
-    color: #fff;
+  bottom: 0;
+  width: 100vw;
+  padding: 1vh 0 0 0;
+
+  background-color: #141414;
+  color: #fff;
+
+  text-transform: uppercase;
+}
+
+.footer-contato {
+  display: flex;
+  gap: 1vw;
+}
+
+.footer-container h1 {
+  letter-spacing: 4px;
+  font-size: 2.5em;
+}
+
+.footer-contato a {
+  text-decoration: none;
+  color: #fff;
+}
+
+/* -------------------------------------------------------------- */
+
+.horarios-container {
+  z-index: 0;
+
+  width: 50%;
+
+  text-align: center;
+  
+}
+
+.horarios-txt{
+    background-color: rgba(255, 255, 255, 0.29);
+    padding: 8vh 0vh;
+    border-radius: 0 0 6px 6px;
+    width: 30vw;
+    margin: 0 auto;
 
     text-transform: uppercase;
-    
+    text-align: justify center;
+    box-shadow: 5px 5px 10px 2px #70707044;
+
+}
+.swiper{
+    margin: 0;
+    padding: 0;
 }
 
-.footer-contato{
-    display: flex;
-    gap: 1vw;
-    
+.horarios-txt h1{
+    margin-top: -3vh;
+    padding-bottom: 2vh;
+    font-size: 2.2em;
 }
 
-.footer-container h1{
-    letter-spacing: 4px;
-    font-size: 2.5em;
+.horarios-txt h3{
+    font-size: 1.5em;
+}
+
+.swiper img {
+  width: 30vw;
+  height: 42vh;
+  box-shadow: 5px 5px 10px 2px #70707044;
+
+}
+
+.swiper,
+.swiper-wrapper,
+.swiper-slide,
+img {
+  z-index: 0;
+  margin: 0;
 }
 
 
-.footer-contato a{
-    text-decoration: none;
-    color: #fff;
-    
-}
