--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,54 +1,86 @@
-.home-container{
-    display: flex;
-    flex-direction: column;
+.home-container {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
 
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
-.home-banner{
-    width: 100vw;
+.home-banner {
+  width: 100vw;
 }
 
-.banner-img{
-    width: 100%;
-    margin-top: -27%;
-    z-index: 5;
+.banner-img {
+  width: 100%;
+  margin-top: -27%;
+  z-index: 5;
 }
 
-.slogan-div{
-    background-color: #333333e0;
-    width: 400px;
-    margin: -25vh 10vw;
-    position: absolute;
-    padding: 0 2vw;
+.slogan-div {
+  background-color: #333333e0;
+  width: 400px;
+  margin: -25vh 10vw;
+  position: absolute;
+  padding: 0 2vw;
 }
 
-.slogan-div h1{
-    font-size: 2.5em;
-    color: #fff;
-    text-transform: uppercase;
+.slogan-div h1 {
+  font-size: 2.5em;
+  color: #fff;
+  text-transform: uppercase;
 }
 
-.home-top{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin: 15vh 4vw;
+.home-top {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 15vh 2vw 15vh -4vw;
 }
 
-.sobre{
-    width: 45%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(1em * 1.5);
-    text-align: center;
-    line-height: 2;
+.sobre {
+  width: 40%;
+  margin: 0 4vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(1em * 1.5);
+  text-align: center;
+  line-height: 2;
 }
 
-.sobre h1{
-    text-transform: uppercase;
-    margin: 0;
+.sobre h1 {
+  text-transform: uppercase;
+  margin: 0;
+}
+
+.endereco {
+  text-transform: uppercase;
+  background-color: #f4ebe2;
+  font-size: 2.5em;
+  z-index: 0;
+  margin: -4vh 15vw 5vh;
+  padding: 0 2vw;
+  width: fit-content;
+}
+
+.home-bot {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+.home-bot h1 {
+  background-color: #333333e0;
+  color: #fff;
+  width: 600px;
+  margin: 0 10vw;
+  position: absolute;
+  padding: 2vh 2vw;
+}
+
+.home-bot img {
+  width: 100%;
+  margin: 3vh 0 -1vh 0;
 }
