--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -39,13 +39,12 @@
 }
 
 .sobre {
-  width: 40%;
-  margin: 0 4vw;
+  width: 30%;
+  margin: 0 4vw 0 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(1em * 1.5);
   text-align: center;
   line-height: 2;
 }
@@ -53,6 +52,11 @@
 .sobre h1 {
   text-transform: uppercase;
   margin: 0;
+  font-size: 3em;
+}
+
+.sobre h3{
+  font-size: 1.5em;
 }
 
 .endereco {
